Added SOY / CLO calc by LP ratio

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "soy_lp_find",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "web3": "^4.5.0"
   }
